changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

server/pets.c, server/player.c, server/plugins.c: Fix some minor issues (such as
  using 0 instead of NULL [leading to more confusing code], using snprintf with
  no format arguments [use strncpy instead], using int instead of tag_t [which
  is typedefed to unsigned int]).
Arvid Norlander 2009-02-06

socket/info.c, server/alchemy.c, server/gods.c: Fix some minor issues (using 0
  instead of NULL [leading to confusing code], casting const char* to char*).
Arvid Norlander 2009-02-06

include/global.h: Get rid of some warnings by making some "char*" "const char*"
  in the Settings struct.
Arvid Norlander 2009-02-06

server/player.c: Make sure unpaid items are removed at death even on non-shop
  floors.
Arvid Norlander 2009-02-06

server/spell_effect.c: Fix part of bug #2457751
  "Unpaid items work for some things...". Staff to snake and animate weapon no
  longer works on unpaid items.
Arvid Norlander 2009-02-06

common/readable.c: Passing the same buffer as both the output buffer as a
  parameter in the format to s(n)printf invokes undefined behaviour. Avoid doing
  that. Tests showed that glibc treated the buffer as empty, resulting in
  ignoring whatever was in the buffer before.
Arvid Norlander 2009-02-06

common/item.c: Make item_types_size static, it isn't used elsewhere.
Arvid Norlander 2009-02-06

server/attack.c: Fix rare abort() with spells like dragonfire on multi-tile
  objects. Required some single tile object to be on top of the multi-tile
  object.
Arvid Norlander 2009-02-04

server/spell_attack.c: Fix bug #2353025 "2.0, holy wrath and ret. strike freeze